--- a/_posts/2016-09-25-test.markdown
+++ b/_posts/2016-09-25-test.markdown
@@ -5,3 +5,6 @@ cover-image: "/uploads/project3.jpg"
 order-id: project-id-5
 ---
 
+![project3.jpg](/uploads/project3.jpg)
+![project3.jpg](/uploads/project3.jpg)
+![project3.jpg](/uploads/project3.jpg)
