--- a/_posts/2016-09-25-test.markdown
+++ b/_posts/2016-09-25-test.markdown
@@ -2,6 +2,7 @@
 title: Test
 date: 2016-09-25 04:27:00 Z
 cover-image: "/uploads/project3.jpg"
+small-text: test text
 order-id: project-id-5
 ---
 
